# lame-stm32f1

./: .gitmodules  CMakeLists.txt  README.md
cmake/: gcc-arm-none-eabi.cmake
config-example/: stm32f1xx_hal_conf.h
drivers/: CMakeLists.txt
drivers/include/: st_hal.h
stm32f1-drivers/: CMakeLists.txt
